# Tempix

./: Cargo.toml  README.md  Tempix.sln  build.rs
sensor-helper/: Program.cs  TempixSensorHelper.csproj
src/: main.rs  render.rs  stats.rs
